# stend

./: .gitignore  CMakeLists.txt  all.hpp
algo/: algo.cpp  algo.hpp  combine_quality.cpp  deblurring.cpp  deblurring.hpp  skeleton.cpp  vector.cpp  vector.hpp
context/: context.cpp  context.hpp
db/: db.cpp  db.hpp  db.py  init.py  insert.py
demo/: dft.lua
doc/: doxyfile
main_loop/: display.hpp  main_loop.cpp  main_loop.hpp
map/: map.cpp  map.hpp
matrix/: matrix.cpp  matrix.hpp
module/: module.cpp  module.hpp
resources/: base_resources.qrc
script_engine/: auxiliary.cpp  auxiliary.hpp  context.cpp  context.hpp  map.cpp  map.hpp  opencv.cpp  opencv.hpp  script_engine.cpp  script_engine.hpp
service/: mtr.py  tin_to_xml.py  trc_to_xml.py
stat/: stat.cpp  stat.hpp
stat/scripts/: call.r  call_first.r  combine_quality.r  memory.r  time.r  time_memory_2D.r  time_memory_3D.r
ui/console/: core.cpp  core.hpp  display.cpp  main.cpp
ui/gui/: main.cpp
ui/gui/resources/: gui_resources.qrc
ui/gui/resources/dialogs/: about_dialog.ui  main_window.ui  setup_dialog.ui
ui/gui/ui/: about_dialog.cpp  about_dialog.hpp  display.cpp  main_window.cpp  main_window.hpp  menu.cpp  menu.hpp  script_highlighter.cpp  script_highlighter.hpp  setup_dialog.cpp  setup_dialog.hpp
various/: smart_list.hpp  various.cpp  various.hpp
video/: video.cpp  video.hpp
